--- a/index.html
+++ b/index.html
@@ -74,7 +74,9 @@
                     
                     <div>
                         <h2 class="about__subtitle">I'am Richard</h2>
-                        <p class="about__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptate cum expedita quo culpa tempora, assumenda, quis fugiat ut voluptates soluta, aut earum nemo recusandae cumque perferendis! Recusandae alias accusamus atque.</p>           
+                        <p class="about__text">I possess extensive skills in IT knowledge and passionate about Mobile and Web App programming. What i don't know i admit it. 
+Am a problem solver software engineer with a 2+ years of experience and a track record of meaningful contribution in React js ,php ,flutter and UI design.
+I am always looking for challenges to hone my skills , learn something each day and i am happy to do a demonstration for you.</p>           
                     </div>                                   
                 </div>
             </section>
@@ -189,10 +191,10 @@
             <p class="footer__title">Richard</p>
             <div class="footer__social">
                 <a href="#" class="footer__icon"><i class='bx bxl-facebook' ></i></a>
-                <a href="#" class="footer__icon"><i class='bx bxl-instagram' ></i></a>
-                <a href="#" class="footer__icon"><i class='bx bxl-twitter' ></i></a>
+                <a href="https://github.com/richie060" class="footer__icon"><i class='bx bxl-instagram' ></i></a>
+                <a href="https://twitter.com/richiegachuhi" class="footer__icon"><i class='bx bxl-twitter' ></i></a>
             </div>
-            <p class="footer__copy">&#169; Bedimcode. All rigths reserved</p>
+            <p class="footer__copy">&#169; RichTech. All rigths reserved</p>
         </footer>
 
 
